Changed the index.html and main.html to the new files.

--- a/main.html
+++ b/main.html
@@ -43,13 +43,16 @@
         <a href="https://www.linkedin.com/in/raymond-manento-76b8a1204/" target="_blank" rel="noopener">
           <i class="fab fa-linkedin social-icon"></i> LinkedIn
         </a>
+        <a href="https://drive.google.com/file/d/13fAJPGaqpTxZPbV45XzPLq_daBGt-7y_/view?usp=drive_link" target="_blank" rel="noopener">
+          <i class="fas fa-file-alt social-icon"></i> Resume
+        </a>
       </div>
     </aside>
 
     <main>
       <article id="about" class="content card" aria-labelledby="about-title">
         <h2 id="about-title">About</h2>
-        <p>I’m a Software and Data Engineer passionate about turning complex problems into solutions that are both functional and easy to understand. My work spans web development, data analytics, and machine learning from building university landing pages that raised over $20,000 in donations to designing AI tools that transform raw data into clear, actionable insights.</p>
+        <p>I’m a Software and Data Engineer passionate about turning complex problems into solutions that are both functional and easy to understand. My work spans web development, data analytics, machine learning and AI workflows. From building university landing pages that raised over $20,000 in donations to designing AI tools that transform raw data into clear, actionable insights.</p>
         <p>I approach every build with a balance of technical precision and structured communication. Beyond writing code, I create detailed project documentation and write-ups that map out the “what,” “why,” and “how,” ensuring stakeholders and teams stay aligned from start to finish.</p>
         <p class="muted">Outside of tech, I stay sharp through weightlifting, basketball, and soccer. Disciplines that keep me competitive and consistent. I also spend time reading and writing, which helps me think differently and bring fresh perspective to the problems I tackle.</p>
       </article>
