--- a/contact.html
+++ b/contact.html
@@ -35,6 +35,7 @@
         <a href="#"><i class="fas fa-envelope"></i></a>
         <a href="https://www.linkedin.com/in/raymond-manento-76b8a1204"><i class="fab fa-linkedin"></i></a>
         <a href="https://github.com/manentojr"><i class="fab fa-github"></i></a>
+        <a href="https://x.com/ray_ento"><i class="fab fa-x-twitter"></i></a>
       </div>
       <p>&copy; Raymond Manento 2025</p>
     </footer>
