--- a/coming-soon.html
+++ b/coming-soon.html
@@ -8,7 +8,7 @@
   <meta name="theme-color" content="#000000" id="theme-color-meta"/>
   
   <!-- Favicon -->
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="LOGO.ico">
   
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
