--- a/coming-soon.html
+++ b/coming-soon.html
@@ -17,6 +17,14 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <!-- tEST -->
+<div style="background: #00ff00; color: black; padding: 20px; text-align: center; font-size: 24px; font-weight: bold;">
+  🚀 DEPLOYMENT TEST - CURRENT TIME: <span id="time"></span>
+</div>
+
+<script>
+document.getElementById('time').textContent = new Date().toLocaleTimeString();
+</script>
   <div class="wrap">
     <aside>
       <div class="brand">
